# indently_python

./: .pre-commit-config.yaml  Dockerfile  README.md  mypy.ini  pyproject.toml  run-mypy.sh
python_tutorials_2024/: asynchronous.py  format.py  immmutability_a_lie.py  no_return.py  operations.py  optimize.py  spaceship_operator.py
src/python_tutorials_2024/: immmutability_a_lie.py  no_return.py  operations.py  random_.py
src/python_tutorials_2024/discord_bot/: main.py  responses.py
